--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="https://qds671.github.io">TOP</a></li>
             <li><a href="">九大少林寺拳法部について</a></li>
-            <li><a href="">練習日程</a></li>
+            <li><a href="https://qds671.github.io/schedule/">練習日程</a></li>
             <li><a href="https://qds671.github.io/profile/">メンバー紹介</a></li>
             <li><a href="https://qds671.github.io/result/">大会成績</a></li>
             <li><a href="">ヒストリー</a></li>
