--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!--以下左メニュー-->
     <div class="menu">
         <h1>メニュー</h1>
-        <ul>
+         <ul>
             <li><a href="https://qds671.github.io">TOP</a></li>
-            <li><a href="">九大少林寺拳法部について</a></li>
             <li><a href="https://qds671.github.io/schedule/">練習日程</a></li>
             <li><a href="https://qds671.github.io/profile/">メンバー紹介</a></li>
             <li><a href="https://qds671.github.io/result/">大会成績</a></li>
-            <li><a href="">ヒストリー</a></li>
-            <li><a href="">梅便り</a></li>
+            <li><a href="https://qusc.wiki.fc2.com/wiki/HISTORY">ヒストリー</a></li>
+            <li><a href="http://umedayori42.wiki.fc2.com/">梅便り</a></li>
+            <li><a href="http://qusc.wiki.fc2.com/wiki/九大少林寺拳法部について">九大少林寺拳法部について</a></li>
             <li><a href="https://twitter.com/shorinjiqu">公式Twitter</a></li>
             <li><a href="https://twitter.com/shorinjiQU_20">新歓Twitter</a></li>
             <li><a href="https://www.facebook.com/QUShorinjiKempo/">FaceBook</a></li>
