--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <h1>備考(練習時間の変更等)</h1>
         <p>現在はオンラインでのみ練習を行なっています。</p>
-        <p>6月は月水土に練習しています。</p>
-        <p>月水19:30~20:30　土11:00~12:00</p>
+        <p>8月は練習をしていません</p>
+        <p></p>
 
 
         </div>
