--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <h1>備考(練習時間の変更等)</h1>
         <p>現在はオンラインでのみ練習を行なっています。</p>
-        <p>8月は練習をしていません</p>
-        <p></p>
+        <p>8月24日から月水土で練習を行います。</p>
+        <p>10:00~11:00</p>
 
 
         </div>
