--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <h2>()の中は幹部練です。</h2>
 
         <h1>備考(練習時間の変更等)</h1>
-        <p>現在はオンラインでのみ練習を行なっています。</p>
-        <p>8月24日から月水土で練習を行います。</p>
-        <p>10:00~11:00</p>
+        <p>8~9月は夏休み期間です。</p>
+        <p></p>
+        <p></p>
 
 
         </div>
