--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <h1>通常の練習時間</h1>
 
         <ul>
-            <li class="ge">月曜日　18:30~21:00</li>
-            <li class="ka">火曜日　18:30~21:00</li>
-            <li class="su">水曜日　休み</li>
-            <li class="mo">木曜日　休み</li>
-            <li class="ki">金曜日　(19:00~21:00)</li>
-            <li class="do">土曜日　10:00~13:00 (15:00~17:00)</li>
-            <li class="ni">日曜日　休み</li>
+            <li><span class="mo">月曜日</span>　18:30~21:00</li>
+            <li><span class="tu">火曜日</span>　18:30~21:00</li>
+            <li><span class="we">水曜日</span>　休み</li>
+            <li><span class="th">木曜日</span>　休み</li>
+            <li><span class="fr">金曜日</span>　(19:00~21:00)</li>
+            <li><span class="sa">土曜日</span>　10:00~13:00 (15:00~17:00)</li>
+            <li><span class="su">日曜日</span>　休み</li>
         </ul>
         <h2>()の中は幹部練です。</h2>
 
