--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><span class="sa">土曜日　10:00~13:00 (15:00~17:00)</span></li>
             <li><span class="su">日曜日　休み</span></li>
         </ul>
+        <!--配色決め試行錯誤した結果spanつける意味なかった()-->
         <h2>()の中は幹部練です。</h2>
 
         <h1>備考(練習時間の変更等)</h1>
