--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>()の中は幹部練です。</h2>
 
         <h1>備考(練習時間の変更等)</h1>
-        <p>8~9月は夏休み期間です。</p>
+        <p>新歓中は不規則になっています。</p>
         <p></p>
         <p></p>
 
